# nbody-collisions

./: Cargo.toml  README.md  index.html  package-lock.json  package.json  vite.config.ts
src/: engine.rs  interaction.ts  lib.rs  main.ts  style.css
wasm/: Cargo.toml
wasm/src/: engine.rs  lib.rs
wasm/src/renderer/: mod.rs  renderer.rs  uniforms.rs  wgpu_state.rs
wasm/src/renderer/shaders/: render.wgsl
wasm/src/simulation/: body.rs  mod.rs  simulation.rs  vec2.rs
