[package]
name = "nbody-collisions"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# default = ["console_error_panic_hook"]

[dependencies]
wasm-bindgen = "0.2.106"
console_error_panic_hook = { version = "0.1.7", optional = true }
wgpu = "28.0.0"
web-sys = { version = "0.3.83", features = ["Window", "Document", "Element", "HtmlCanvasElement"] }
wasm-bindgen-futures = "0.4.56"
console_log = "1.0.0"
log = "0.4.29"
bytemuck = "1.24.0"
